--- a/NAMESPACE
+++ b/NAMESPACE
@@ -396,4 +396,4 @@ importFrom(utils,txtProgressBar)
 importFrom(utils,write.table)
 importFrom(foreach,foreach)
 importFrom(foreach,"%dopar%")
-useDynLib(Seurat)
+useDynLib(Seurat2)
